--- a/Rotten Tomatoes/Base.lproj/Main.storyboard
+++ b/Rotten Tomatoes/Base.lproj/Main.storyboard
@@ -57,11 +57,25 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <view alpha="0.94999999999999996" contentMode="scaleToFill" id="hJo-Cn-0QI">
+                                <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="! Network Error" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wEo-af-x5K">
+                                        <rect key="frame" x="97" y="11" width="116" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="kQf-UG-356"/>
                     <connections>
+                        <outlet property="ErrorView" destination="hJo-Cn-0QI" id="IYy-eu-sUD"/>
                         <outlet property="tableView" destination="l00-SB-fy1" id="OnA-E7-JdK"/>
                     </connections>
                 </viewController>
